--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,28 @@
 {
   "manifest_version": 2,
   "name": "YouSpot",
-  "version": "0.1",
+  "version": "1.0",
+  "author": "Andrew Magana",
+  "description": "Creates a Spotify playlist of the music found via YouTube.",
+  "browser_action": {
+    "default_icon": "icon.png",
+    "default_title": "YouSpot",
+    "default_popup": "popup.html"
+  },
+  "background": {
+    "scripts": [
+      "background.js"
+    ],
+    "persistent": false
+  },
   "content_scripts": [
     {
-      "matches": ["https://*.youtube.com/*"],
-      "js": ["content.js"]
+      "matches": [
+        "https://*.youtube.com/*"
+      ],
+      "js": [
+        "popup.js"
+      ]
     }
-  ],
-  "browser_action": {
-    "default_icon": "icon.png"
-  }
+  ]
 }
