--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,12 @@
   "version": "1.0",
   "author": "Andrew Magana",
   "description": "Creates a Spotify playlist of the music found via YouTube.",
+  "permissions": [
+    "https://*.youtube.com/*"
+  ],
   "browser_action": {
     "default_icon": "icon.png",
-    "default_title": "YouSpot",
-    "default_popup": "popup.html"
+    "default_title": "YouSpot"
   },
   "background": {
     "scripts": [
