--- a/manifest.json
+++ b/manifest.json
@@ -4,27 +4,10 @@
   "version": "1.0",
   "author": "Andrew Magana",
   "description": "Creates a Spotify playlist of the music found via YouTube.",
-  "permissions": [
-    "https://*.youtube.com/*"
-  ],
+  "permissions": ["https://*.youtube.com/*", "tabs"],
   "browser_action": {
     "default_icon": "icon.png",
-    "default_title": "YouSpot"
-  },
-  "background": {
-    "scripts": [
-      "background.js"
-    ],
-    "persistent": false
-  },
-  "content_scripts": [
-    {
-      "matches": [
-        "https://*.youtube.com/*"
-      ],
-      "js": [
-        "popup.js"
-      ]
-    }
-  ]
+    "default_title": "YouSpot",
+    "default_popup": "popup.html"
+  }
 }
